updating scheduled tasks and attack history

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ POSTGRES_PRISMA_URL="postgresql://dt:darkthrone@192.168.4.4/darkthrone"
 NODE_ENV="development"
 POSTGRES_URL_NON_POOLING="postgresql://dt:darkthrone@192.168.4.4/darkthrone"
 NEXTAUTH_URL=https://darkcurse.dev
+TASK_SECRET="TESTING"
