--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/marked": "^5.0.0",
     "@types/md5": "^2.3.2",
