--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@marsidev/react-turnstile": "^0.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.1",
     "@types/bcrypt": "^5.0.0",
