--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NODE_ENV="development"
 POSTGRES_URL_NON_POOLING="postgresql://dt:darkthrone@192.168.4.4/darkthrone"
 NEXTAUTH_URL=https://darkcurse.dev
 TASK_SECRET="TESTING"
+NEXT_PUBLIC_TURNSTILE_SECRET=0x4AAAAAAAJJlL13NxxyF9TsZwY5QtjQqu0
+NEXT_PUBLIC_TURNSTILE_SITE_ID=0x4AAAAAAAJJlPwUwDISclq0
