--- a/package.json
+++ b/package.json
@@ -52,9 +52,14 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.0",
     "react-server-dom-webpack": "^0.0.1",
+    "rehype-stringify": "^10.0.0",
     "remark": "^14.0.3",
+    "remark-gfm": "^4.0.0",
     "remark-html": "^15.0.2",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.0.0",
     "rpg-awesome": "^0.2.0",
     "rxjs": "^7.8.1",
     "superjson": "^1.12.4",
