--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
 JWT_SECRET="TESTSTRING"
 PORT=3000
-POSTGRES_PRISMA_URL="postgresql://dc:darkcurse@192.168.0.1/darkcurse"
+POSTGRES_PRISMA_URL="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
 NODE_ENV="development"
-POSTGRES_URL_NON_POOLING="postgresql://dc:darkcurse@192.168.0.1/darkcurse"
+POSTGRES_URL_NON_POOLING="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
 NEXTAUTH_URL=https://localhost:3000
 TASK_SECRET="TESTING"
 NEXT_PUBLIC_TURNSTILE_SECRET=0xGETCODEFROMCLOUDFLARE
