--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@hookform/resolvers": "^3.1.1",
     "@marsidev/react-turnstile": "^0.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.16.1",
+    "@prisma/cli": "latest",
+    "@prisma/client": "latest",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/marked": "^5.0.0",
