--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "next-js-boilerplate",
   "version": "3.11.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
@@ -15,108 +15,116 @@
     "test": "jest",
     "commit": "cz",
     "prepare": "husky install",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "bun-dev": "npx next"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.1",
-    "@marsidev/react-turnstile": "^0.3.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/cli": "latest",
     "@prisma/client": "latest",
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/marked": "^5.0.0",
-    "@types/md5": "^2.3.2",
-    "bcrypt": "^5.1.0",
+    "@react-email/container": "0.0.11",
+    "@react-email/html": "0.0.7",
+    "@react-email/section": "0.0.11",
+    "@react-email/text": "0.0.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bun": "^1.0.2",
+    "@types/marked": "^5.0.2",
+    "@types/md5": "^2.3.5",
+    "argon2": "^0.31.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cypress": "^13.3.0",
+    "cypress": "^13.6.3",
     "express-jwt": "^8.4.1",
-    "framer-motion": "^10.12.20",
-    "marked": "^5.1.1",
-    "marked-gfm-heading-id": "^3.0.4",
-    "marked-mangle": "^1.1.0",
+    "framer-motion": "^10.18.0",
+    "marked": "^11.1.1",
+    "marked-gfm-heading-id": "^3.1.2",
+    "marked-mangle": "^1.1.6",
     "md5": "^2.3.0",
-    "mysql2": "^3.4.2",
+    "mysql2": "^3.7.1",
     "mysql2-promise": "^0.1.4",
-    "next": "^13.4.7",
-    "next-auth": "^4.22.1",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
     "next-auth-client": "^1.5.0",
     "next-mdx-remote": "^4.4.1",
-    "next-seo": "^6.0.0",
-    "next-sitemap": "^4.1.3",
-    "next-superjson-plugin": "^0.5.8",
-    "pg": "^8.11.1",
+    "next-seo": "^6.4.0",
+    "next-sitemap": "^4.2.3",
+    "next-superjson-plugin": "^0.5.10",
+    "node-mailer": "^0.1.1",
+    "nodemailer": "^6.9.8",
+    "pg": "^8.11.3",
     "postgresql": "^0.0.1",
-    "prisma": "^4.16.1",
+    "prisma": "^5.8.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.0",
+    "react-email": "2.0.0",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
-    "react-markdown": "^9.0.0",
-    "react-server-dom-webpack": "^0.0.1",
+    "react-markdown": "^9.0.1",
     "rehype-stringify": "^10.0.0",
-    "remark": "^14.0.3",
+    "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
-    "remark-html": "^15.0.2",
+    "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "rpg-awesome": "^0.2.0",
     "rxjs": "^7.8.1",
     "superjson": "^1.12.4",
-    "swr": "^2.2.0",
-    "tailwindcss": "^3.3.2",
+    "swr": "^2.2.4",
+    "tailwindcss": "^3.4.1",
     "use-async-effect": "^2.2.7",
-    "yup": "^1.2.0"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.4",
-    "@percy/cli": "^1.25.0",
+    "@next/bundle-analyzer": "^14.1.0",
+    "@percy/cli": "^1.27.7",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "autoprefixer": "^10.4.14",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "autoprefixer": "^10.4.17",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
-    "cssnano": "^6.0.1",
-    "eslint": "^8.42.0",
+    "cssnano": "^6.0.3",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^13.4.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jest-dom": "^5.0.1",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "^14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-storybook": "^0.6.12",
-    "eslint-plugin-tailwindcss": "^3.12.1",
-    "eslint-plugin-testing-library": "^5.11.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-tailwindcss": "^3.14.0",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "lint-staged": "^13.2.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "rimraf": "^5.0.1",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "rimraf": "^5.0.5",
     "semantic-release": "^19.0.5",
-    "start-server-and-test": "^2.0.0",
-    "typescript": "^4.9.5"
+    "start-server-and-test": "^2.0.3",
+    "typescript": "^5.3.3"
   },
   "release": {
     "branches": [
