--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "latest",
+    "@prisma/client": "^5.9.1",
     "@react-email/container": "0.0.11",
     "@react-email/html": "0.0.7",
     "@react-email/section": "0.0.11",
@@ -32,6 +32,7 @@
     "@types/bun": "^1.0.2",
     "@types/marked": "^5.0.2",
     "@types/md5": "^2.3.5",
+    "@types/nodemailer": "^6.4.14",
     "argon2": "^0.31.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
