--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,15 @@
     "resolveJsonModule": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "strict": true,
-    "alwaysStrict": true,
-    "strictNullChecks": true,
+    "strict": false,
+    "alwaysStrict": false,
+    "strictNullChecks": false,
     "noUncheckedIndexedAccess": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
+    "noImplicitThis": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "allowUnreachableCode": false,
     "noFallthroughCasesInSwitch": true,
     "target": "es5",
@@ -47,7 +47,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".storybook/*.ts",
-    ".next/types/**/*.ts",
-    "src/pages/structures/upgrades/.index.tsx"
+    ".next/types/**/*.ts"
   ]
 }
