--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,14 @@ NEXTAUTH_URL=https://localhost:3000
 TASK_SECRET="TESTING"
 NEXT_PUBLIC_TURNSTILE_SECRET=0xGETCODEFROMCLOUDFLARE
 NEXT_PUBLIC_TURNSTILE_SITE_ID=0xGETSITEIDFROMCLOUDFLARE
+SMTP_HOST="mailhost"
+SMTP_PORT="465"
+SMTP_USER="api@openthrone.dev"
+SMTP_PASSWORD="MailPassword"
+SMTP_FROM_EMAIL="no-reply@openthrone.dev"
+AWS_ACCESS_KEY_ID=0xGETKEYFROMAWS
+AWS_SECRET_ACCESS_KEY=0xGETSECRETKEYFROMAWS
+AWS_TOKEN=0xGETTOKENFROMAWS
+AWS_BUCKET_NAME="openthrone"
+AWS_REGION="us-east-1"
+AWS_S3_ENDPOINT="https://assets.openthrone.dev/"
