--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bun-dev": "npx next"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.549.0",
+    "@aws-sdk/s3-request-presigner": "^3.549.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -41,11 +43,14 @@
     "@types/md5": "^2.3.5",
     "@types/nodemailer": "^6.4.14",
     "argon2": "^0.31.2",
+    "aws-sdk": "^2.1592.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cypress": "^13.6.3",
     "express-jwt": "^8.4.1",
+    "formidable": "^3.5.1",
     "framer-motion": "^10.18.0",
+    "image-size": "^1.1.1",
     "marked": "^11.1.1",
     "marked-gfm-heading-id": "^3.1.2",
     "marked-mangle": "^1.1.6",
