--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-email": "2.0.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
