--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "next-js-boilerplate",
-  "version": "3.11.0",
+  "name": "openthrone",
+  "version": "0.1.0",
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "export": "next export",
     "build-prod": "run-s clean build export",
@@ -36,6 +36,7 @@
     "@react-email/html": "0.0.7",
     "@react-email/section": "0.0.11",
     "@react-email/text": "0.0.7",
+    "@swc/core": "latest",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/bun": "^1.0.2",
@@ -44,6 +45,7 @@
     "@types/nodemailer": "^6.4.14",
     "argon2": "^0.31.2",
     "aws-sdk": "^2.1592.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cypress": "^13.6.3",
@@ -57,21 +59,21 @@
     "md5": "^2.3.0",
     "mysql2": "^3.7.1",
     "mysql2-promise": "^0.1.4",
-    "next": "^14.1.0",
+    "next": "^15.0.0-rc.0",
     "next-auth": "^4.24.5",
     "next-auth-client": "^1.5.0",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.4.0",
     "next-sitemap": "^4.2.3",
-    "next-superjson-plugin": "^0.5.10",
+    "next-superjson-plugin": "latest",
     "node-mailer": "^0.1.1",
     "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
     "postgresql": "^0.0.1",
     "prisma": "^5.8.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0-rc-eb259b5d3b-20240605",
+    "react-dom": "^19.0.0-rc-eb259b5d3b-20240605",
     "react-email": "2.0.0",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
@@ -93,7 +95,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.1.0",
+    "@next/bundle-analyzer": "latest",
     "@percy/cli": "^1.27.7",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -102,7 +104,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.17",
@@ -112,7 +114,7 @@
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^15.0.0-rc.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-import": "^2.29.1",
