Fix the revalidation environment variable

--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,7 @@ NODE_ENV="development"
 POSTGRES_URL_NON_POOLING="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
 NEXTAUTH_URL=https://localhost:3000
 TASK_SECRET="TESTING"
+REVALIDATION_SECRET="CHANGE_ME_TO_REVALIDATE_STATS"
 NEXT_PUBLIC_TURNSTILE_SECRET=0xGETCODEFROMCLOUDFLARE
 NEXT_PUBLIC_TURNSTILE_SITE_ID=0xGETSITEIDFROMCLOUDFLARE
 SMTP_HOST="mailhost"
