updated package.json for new editors

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "bun-dev": "npx next"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.598.0",
-    "@aws-sdk/s3-request-presigner": "^3.598.0",
+    "@aws-sdk/client-s3": "^3.600.0",
+    "@aws-sdk/s3-request-presigner": "^3.600.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -29,26 +29,36 @@
     "@mantine/form": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@mantine/notifications": "^7.10.2",
+    "@mantine/tiptap": "^7.10.2",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.15.1",
     "@react-email/container": "0.0.11",
     "@react-email/html": "0.0.7",
     "@react-email/section": "0.0.11",
     "@react-email/text": "0.0.7",
     "@swc/core": "latest",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-subscript": "^2.4.0",
+    "@tiptap/extension-superscript": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/bun": "^1.1.4",
+    "@types/bun": "^1.1.5",
     "@types/marked": "^5.0.2",
     "@types/md5": "^2.3.5",
     "@types/nodemailer": "^6.4.15",
     "argon2": "^0.31.2",
-    "aws-sdk": "^2.1642.0",
+    "aws-sdk": "^2.1646.0",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cypress": "^13.11.0",
+    "cypress": "^13.12.0",
     "express-jwt": "^8.4.1",
     "formidable": "^3.5.1",
     "framer-motion": "^10.18.0",
@@ -67,10 +77,10 @@
     "next-sitemap": "^4.2.3",
     "next-superjson-plugin": "latest",
     "node-mailer": "^0.1.1",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "postgresql": "^0.0.1",
-    "prisma": "^5.15.0",
+    "prisma": "^5.15.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
@@ -91,18 +101,19 @@
     "superjson": "^1.13.3",
     "swr": "^2.2.5",
     "tailwindcss": "^3.4.4",
+    "tiptap-markdown": "^0.8.10",
     "use-async-effect": "^2.2.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "latest",
-    "@percy/cli": "^1.28.7",
+    "@percy/cli": "^1.28.8",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -121,13 +132,13 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-tailwindcss": "^3.17.3",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "eslint-plugin-testing-library": "^6.2.2",
     "eslint-plugin-unused-imports": "^3.2.0",
     "http-server": "^14.1.1",
@@ -143,7 +154,7 @@
     "rimraf": "^5.0.7",
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^2.0.4",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2"
   },
   "release": {
     "branches": [
