--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
     "bun-dev": "npx next"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.600.0",
-    "@aws-sdk/s3-request-presigner": "^3.600.0",
+    "@aws-sdk/client-s3": "^3.606.0",
+    "@aws-sdk/s3-request-presigner": "^3.606.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
-    "@mantine/core": "^7.10.2",
-    "@mantine/form": "^7.10.2",
-    "@mantine/hooks": "^7.10.2",
-    "@mantine/notifications": "^7.10.2",
-    "@mantine/tiptap": "^7.10.2",
+    "@mantine/charts": "^7.11.0",
+    "@mantine/core": "^7.11.0",
+    "@mantine/form": "^7.11.0",
+    "@mantine/hooks": "^7.11.0",
+    "@mantine/notifications": "^7.11.0",
+    "@mantine/tiptap": "^7.11.0",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.16.1",
     "@react-email/container": "0.0.11",
     "@react-email/html": "0.0.7",
     "@react-email/section": "0.0.11",
@@ -49,13 +50,13 @@
     "@tiptap/starter-kit": "^2.4.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/bun": "^1.1.5",
+    "@types/bun": "^1.1.6",
     "@types/marked": "^5.0.2",
     "@types/md5": "^2.3.5",
     "@types/nodemailer": "^6.4.15",
     "argon2": "^0.31.2",
-    "aws-sdk": "^2.1646.0",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
+    "aws-sdk": "^2.1651.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-696af53-20240625",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cypress": "^13.12.0",
@@ -80,7 +81,7 @@
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "postgresql": "^0.0.1",
-    "prisma": "^5.15.1",
+    "prisma": "^5.16.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
@@ -89,6 +90,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.12.7",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
@@ -113,7 +115,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
