--- a/package.json
+++ b/package.json
@@ -19,35 +19,35 @@
     "bun-dev": "npx next"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.606.0",
-    "@aws-sdk/s3-request-presigner": "^3.606.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@aws-sdk/client-s3": "^3.623.0",
+    "@aws-sdk/s3-request-presigner": "^3.623.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@hookform/resolvers": "^3.6.0",
-    "@mantine/charts": "^7.11.0",
-    "@mantine/core": "^7.11.0",
-    "@mantine/form": "^7.11.0",
-    "@mantine/hooks": "^7.11.0",
-    "@mantine/notifications": "^7.11.0",
-    "@mantine/tiptap": "^7.11.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@mantine/charts": "^7.11.2",
+    "@mantine/core": "^7.11.2",
+    "@mantine/form": "^7.11.2",
+    "@mantine/hooks": "^7.11.2",
+    "@mantine/notifications": "^7.11.2",
+    "@mantine/tiptap": "^7.11.2",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.17.0",
     "@react-email/container": "0.0.11",
     "@react-email/html": "0.0.7",
     "@react-email/section": "0.0.11",
     "@react-email/text": "0.0.7",
     "@swc/core": "latest",
-    "@tiptap/extension-highlight": "^2.4.0",
-    "@tiptap/extension-link": "^2.4.0",
-    "@tiptap/extension-subscript": "^2.4.0",
-    "@tiptap/extension-superscript": "^2.4.0",
-    "@tiptap/extension-text-align": "^2.4.0",
-    "@tiptap/extension-underline": "^2.4.0",
-    "@tiptap/pm": "^2.4.0",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
+    "@tiptap/extension-highlight": "^2.5.8",
+    "@tiptap/extension-link": "^2.5.8",
+    "@tiptap/extension-subscript": "^2.5.8",
+    "@tiptap/extension-superscript": "^2.5.8",
+    "@tiptap/extension-text-align": "^2.5.8",
+    "@tiptap/extension-underline": "^2.5.8",
+    "@tiptap/pm": "^2.5.8",
+    "@tiptap/react": "^2.5.8",
+    "@tiptap/starter-kit": "^2.5.8",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/bun": "^1.1.6",
@@ -55,11 +55,11 @@
     "@types/md5": "^2.3.5",
     "@types/nodemailer": "^6.4.15",
     "argon2": "^0.31.2",
-    "aws-sdk": "^2.1651.0",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-696af53-20240625",
+    "aws-sdk": "^2.1667.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-334f00b-20240725",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cypress": "^13.12.0",
+    "cypress": "^13.13.2",
     "express-jwt": "^8.4.1",
     "formidable": "^3.5.1",
     "framer-motion": "^10.18.0",
@@ -68,9 +68,9 @@
     "marked-gfm-heading-id": "^3.2.0",
     "marked-mangle": "^1.1.8",
     "md5": "^2.3.0",
-    "mysql2": "^3.10.1",
+    "mysql2": "^3.11.0",
     "mysql2-promise": "^0.1.4",
-    "next": "^15.0.0-rc.0",
+    "next": "^15.0.0-rc.",
     "next-auth": "^4.24.7",
     "next-auth-client": "^1.5.0",
     "next-mdx-remote": "^4.4.1",
@@ -81,12 +81,12 @@
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "postgresql": "^0.0.1",
-    "prisma": "^5.16.1",
+    "prisma": "^5.17.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-email": "2.0.0",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
@@ -102,25 +102,25 @@
     "rxjs": "^7.8.1",
     "superjson": "^1.13.3",
     "swr": "^2.2.5",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.7",
     "tiptap-markdown": "^0.8.10",
     "use-async-effect": "^2.2.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "latest",
-    "@percy/cli": "^1.28.8",
+    "@percy/cli": "^1.29.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
     "cssnano": "^6.1.2",
@@ -135,8 +135,8 @@
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
@@ -149,14 +149,14 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.38",
-    "postcss-preset-mantine": "^1.15.0",
+    "postcss": "^8.4.40",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.3.2",
-    "rimraf": "^5.0.7",
+    "prettier": "^3.3.3",
+    "rimraf": "^5.0.10",
     "semantic-release": "^19.0.5",
-    "start-server-and-test": "^2.0.4",
-    "typescript": "^5.5.2"
+    "start-server-and-test": "^2.0.5",
+    "typescript": "^5.5.4"
   },
   "release": {
     "branches": [
