--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "md5": "^2.3.0",
     "mysql2": "^3.11.0",
     "mysql2-promise": "^0.1.4",
-    "next": "^15.0.0-rc.",
+    "next": "^15.0.0-rc.0",
     "next-auth": "^4.24.7",
     "next-auth-client": "^1.5.0",
     "next-mdx-remote": "^4.4.1",
