Get the app working (again!)
Also adds some documentation comments to the .env.sample file just so
folks will know wtf is going on.

--- a/.env.sample
+++ b/.env.sample
@@ -1,21 +1,37 @@
+# Change this!
 JWT_SECRET="TESTSTRING"
+
 PORT=3000
-POSTGRES_PRISMA_URL="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
+
 NODE_ENV="development"
+
+# Change these to your local postgres settings! (both can be the same)
+POSTGRES_PRISMA_URL="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
 POSTGRES_URL_NON_POOLING="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
-NEXTAUTH_URL=https://localhost:3000
+
+# Change this to https if you have SSL set up locally!
+NEXTAUTH_URL=http://localhost:3000
+
+# A few other secret keys you might want to change
 TASK_SECRET="TESTING"
 REVALIDATION_SECRET="CHANGE_ME_TO_REVALIDATE_STATS"
+
 NEXT_PUBLIC_TURNSTILE_SECRET=0xGETCODEFROMCLOUDFLARE
 NEXT_PUBLIC_TURNSTILE_SITE_ID=0xGETSITEIDFROMCLOUDFLARE
+
 SMTP_HOST="mailhost"
 SMTP_PORT="465"
 SMTP_USER="api@openthrone.dev"
 SMTP_PASSWORD="MailPassword"
 SMTP_FROM_EMAIL="no-reply@openthrone.dev"
+
+# AWS settings if you need them
 AWS_ACCESS_KEY_ID=0xGETKEYFROMAWS
 AWS_SECRET_ACCESS_KEY=0xGETSECRETKEYFROMAWS
 AWS_TOKEN=0xGETTOKENFROMAWS
 AWS_BUCKET_NAME="openthrone"
 AWS_REGION="us-east-1"
 AWS_S3_ENDPOINT="https://assets.openthrone.dev/"
+
+# If you're using AWS S3, change this!
+NEXT_PUBLIC_AWS_S3_ENDPOINT=""
