Only use CAPTCHA when configured; fallback for IPs

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,6 @@
 JWT_SECRET="TESTSTRING"
 
 PORT=3000
-
 NODE_ENV="development"
 
 # Change these to your local postgres settings! (both can be the same)
@@ -16,8 +15,12 @@ NEXTAUTH_URL=http://localhost:3000
 TASK_SECRET="TESTING"
 REVALIDATION_SECRET="CHANGE_ME_TO_REVALIDATE_STATS"
 
+# Set these to your CloudFlare Turnstile settings
 NEXT_PUBLIC_TURNSTILE_SECRET=0xGETCODEFROMCLOUDFLARE
 NEXT_PUBLIC_TURNSTILE_SITE_ID=0xGETSITEIDFROMCLOUDFLARE
+
+# ...or set this to false, if you're not using CloudFlare
+USE_CAPTCHA=true
 
 SMTP_HOST="mailhost"
 SMTP_PORT="465"
