--- a/.env.sample
+++ b/.env.sample
@@ -28,7 +28,8 @@ SMTP_USER="api@openthrone.dev"
 SMTP_PASSWORD="MailPassword"
 SMTP_FROM_EMAIL="no-reply@openthrone.dev"
 
-# AWS settings if you need them
+# AWS S3 settings - change these if you're using this for static assets
+USE_AWS=false
 AWS_ACCESS_KEY_ID=0xGETKEYFROMAWS
 AWS_SECRET_ACCESS_KEY=0xGETSECRETKEYFROMAWS
 AWS_TOKEN=0xGETTOKENFROMAWS
