Fix environment variable for public viewing; break and add conditional to race

--- a/.env.sample
+++ b/.env.sample
@@ -29,7 +29,7 @@ SMTP_PASSWORD="MailPassword"
 SMTP_FROM_EMAIL="no-reply@openthrone.dev"
 
 # AWS S3 settings - change these if you're using this for static assets
-USE_AWS=false
+NEXT_PUBLIC_USE_AWS=false
 AWS_ACCESS_KEY_ID=0xGETKEYFROMAWS
 AWS_SECRET_ACCESS_KEY=0xGETSECRETKEYFROMAWS
 AWS_TOKEN=0xGETTOKENFROMAWS
