Missed USE_CAPTCHA for #166

--- a/.env.sample
+++ b/.env.sample
@@ -20,7 +20,7 @@ NEXT_PUBLIC_TURNSTILE_SECRET=0xGETCODEFROMCLOUDFLARE
 NEXT_PUBLIC_TURNSTILE_SITE_ID=0xGETSITEIDFROMCLOUDFLARE
 
 # ...or set this to false, if you're not using CloudFlare
-USE_CAPTCHA=true
+NEXT_PUBLIC_USE_CAPTCHA=true
 
 SMTP_HOST="mailhost"
 SMTP_PORT="465"
