quick fix for recent environment variable. NEXT_PUBLIC_URL is reserved.

--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,7 @@ POSTGRES_URL_NON_POOLING="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
 
 # Change this to https if you have SSL set up locally!
 NEXTAUTH_URL=http://localhost:3000
-NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_URL_ROOT=http://localhost:3000
 
 # A few other secret keys you might want to change
 TASK_SECRET="TESTING"
