--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "next-superjson-plugin": "latest",
+    "node-cron": "^3.0.3",
     "node-mailer": "^0.1.1",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
