Add config variable for whether to run cron jobs

--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,11 @@ JWT_SECRET="TESTSTRING"
 PORT=3000
 NODE_ENV="development"
 
+# Whether or not to run updates for turns and days (useful if you're running
+# multiple servers on the same database, for example)
+DO_TURN_UPDATES=true
+DO_DAILY_UPDATES=true
+
 # Change these to your local postgres settings! (both can be the same)
 POSTGRES_PRISMA_URL="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
 POSTGRES_URL_NON_POOLING="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
