--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "openthrone",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev --turbo -p 3000",
     "build": "next build",
     "start": "next start -p 3001",
     "build-stats": "cross-env ANALYZE=true npm run build",
@@ -19,145 +19,144 @@
     "bun-dev": "npx next"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.623.0",
-    "@aws-sdk/s3-request-presigner": "^3.623.0",
+    "@aws-sdk/client-s3": "^3.682.0",
+    "@aws-sdk/s3-request-presigner": "^3.682.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@hookform/resolvers": "^3.9.0",
-    "@mantine/charts": "^7.11.2",
-    "@mantine/core": "^7.11.2",
-    "@mantine/form": "^7.11.2",
-    "@mantine/hooks": "^7.11.2",
-    "@mantine/notifications": "^7.11.2",
-    "@mantine/tiptap": "^7.11.2",
+    "@hookform/resolvers": "^3.9.1",
+    "@mantine/charts": "^7.13.4",
+    "@mantine/core": "^7.13.4",
+    "@mantine/form": "^7.13.4",
+    "@mantine/hooks": "^7.13.4",
+    "@mantine/notifications": "^7.13.4",
+    "@mantine/tiptap": "^7.13.4",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.21.1",
     "@react-email/container": "0.0.11",
     "@react-email/html": "0.0.7",
     "@react-email/section": "0.0.11",
     "@react-email/text": "0.0.7",
     "@swc/core": "latest",
-    "@tiptap/extension-highlight": "^2.5.8",
-    "@tiptap/extension-link": "^2.5.8",
-    "@tiptap/extension-subscript": "^2.5.8",
-    "@tiptap/extension-superscript": "^2.5.8",
-    "@tiptap/extension-text-align": "^2.5.8",
-    "@tiptap/extension-underline": "^2.5.8",
-    "@tiptap/pm": "^2.5.8",
-    "@tiptap/react": "^2.5.8",
-    "@tiptap/starter-kit": "^2.5.8",
+    "@tiptap/extension-highlight": "^2.9.1",
+    "@tiptap/extension-link": "^2.9.1",
+    "@tiptap/extension-subscript": "^2.9.1",
+    "@tiptap/extension-superscript": "^2.9.1",
+    "@tiptap/extension-text-align": "^2.9.1",
+    "@tiptap/extension-underline": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/bun": "^1.1.6",
+    "@types/bun": "^1.1.12",
     "@types/marked": "^5.0.2",
     "@types/md5": "^2.3.5",
-    "@types/nodemailer": "^6.4.15",
+    "@types/nodemailer": "^6.4.16",
     "argon2": "^0.31.2",
-    "aws-sdk": "^2.1667.0",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-334f00b-20240725",
+    "aws-sdk": "^2.1691.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-6fc168f-20241025",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cypress": "^13.13.2",
+    "cypress": "^13.15.1",
     "express-jwt": "^8.4.1",
-    "formidable": "^3.5.1",
+    "formidable": "^3.5.2",
     "framer-motion": "^10.18.0",
     "image-size": "^1.1.1",
     "marked": "^11.2.0",
     "marked-gfm-heading-id": "^3.2.0",
-    "marked-mangle": "^1.1.8",
+    "marked-mangle": "^1.1.9",
     "md5": "^2.3.0",
-    "mysql2": "^3.11.0",
+    "mysql2": "^3.11.3",
     "mysql2-promise": "^0.1.4",
-    "next": "^15.0.0-rc.0",
-    "next-auth": "^4.24.7",
+    "next": "^15.0.2",
+    "next-auth": "^4.24.10",
     "next-auth-client": "^1.5.0",
     "next-mdx-remote": "^4.4.1",
-    "next-seo": "^6.5.0",
+    "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
-    "next-superjson-plugin": "latest",
     "node-cron": "^3.0.3",
     "node-mailer": "^0.1.1",
-    "nodemailer": "^6.9.14",
-    "pg": "^8.12.0",
+    "nodemailer": "^6.9.16",
+    "pg": "^8.13.1",
     "postgresql": "^0.0.1",
-    "prisma": "^5.17.0",
+    "prisma": "^5.21.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-email": "2.0.0",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.1",
     "rehype-raw": "^7.0.0",
-    "rehype-stringify": "^10.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
+    "remark-rehype": "^11.1.1",
     "rpg-awesome": "^0.2.0",
     "rxjs": "^7.8.1",
     "superjson": "^1.13.3",
     "swr": "^2.2.5",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.4.14",
     "tiptap-markdown": "^0.8.10",
     "use-async-effect": "^2.2.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "latest",
-    "@percy/cli": "^1.29.1",
+    "@percy/cli": "^1.30.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^14.3.1",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.14",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.20",
-    "commitizen": "^4.3.0",
+    "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
     "cssnano": "^6.1.2",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^15.0.0-rc.0",
+    "eslint-config-next": "^15.0.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.2",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "eslint-plugin-testing-library": "^6.2.2",
+    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-testing-library": "^6.4.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.7",
+    "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
     "rimraf": "^5.0.10",
     "semantic-release": "^19.0.5",
-    "start-server-and-test": "^2.0.5",
-    "typescript": "^5.5.4"
+    "start-server-and-test": "^2.0.8",
+    "typescript": "^5.6.3"
   },
   "release": {
     "branches": [
