Add ability to disable SpyMissions, and start expanding other configurations to be enabled from env for now

--- a/.env.sample
+++ b/.env.sample
@@ -45,3 +45,11 @@ AWS_S3_ENDPOINT="https://assets.openthrone.dev/"
 
 # If you're using AWS S3, change this!
 NEXT_PUBLIC_AWS_S3_ENDPOINT=""
+
+# Adding booleans for easy testing
+NEXT_PUBLIC_ENABLE_ASSASSINATIONS=false
+NEXT_PUBLIC_ENABLE_INFILTRATIONS=false
+NEXT_PUBLIC_ENABLE_INTEL=true
+NEXT_PUBLIC_ENABLE_ATTACKING=true
+NEXT_PUBLIC_ATTACK_LEVEL_RANGE=5
+NEXT_PUBLIC_ENABLE_MESSAGING=true
