Add the ability to disable logins/registrations, add security for #281, still need ip logging

--- a/.env.sample
+++ b/.env.sample
@@ -1,55 +1,64 @@
-# Change this!
+# Change this to a secure random string!
 JWT_SECRET="TESTSTRING"
 
+# Server settings
 PORT=3000
 NODE_ENV="development"
+
+# Database settings (update as needed)
+POSTGRES_PRISMA_URL="postgresql://username:password@host:port/database?pgbouncer=true"
+POSTGRES_URL_NON_POOLING="postgresql://username:password@host:port/database"
+POSTGRES_URL_NON_POOLING_SHADOW="postgresql://username:password@host:port/database"
+DB_TIMEOUT=10000
 
 # Whether or not to run updates for turns and days (useful if you're running
 # multiple servers on the same database, for example)
 DO_TURN_UPDATES=true
 DO_DAILY_UPDATES=true
 
-# Change these to your local postgres settings! (both can be the same)
-POSTGRES_PRISMA_URL="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
-POSTGRES_URL_NON_POOLING="postgresql://dc:OpenThrone@192.168.0.1/OpenThrone"
-
-# Change this to https if you have SSL set up locally!
+# Authentication settings
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_URL_ROOT=http://localhost:3000
 
-# CHANGE THIS TO A RANDOM/SECURE STRING
-TASK_SECRET="TESTING"
+# Change these to secure random strings
+TASK_SECRET="CHANGE_ME_TO_SECURE_STRING"
 REVALIDATION_SECRET="CHANGE_ME_TO_REVALIDATE_STATS"
 
-# Set these to your CloudFlare Turnstile settings
-NEXT_PUBLIC_TURNSTILE_SECRET=0xGETCODEFROMCLOUDFLARE
-NEXT_PUBLIC_TURNSTILE_SITE_ID=0xGETSITEIDFROMCLOUDFLARE
-
-# ...or set this to false, if you're not using CloudFlare
+# Cloudflare Turnstile settings
+NEXT_PUBLIC_TURNSTILE_SECRET="GET_YOUR_TURNSTILE_SECRET"
+NEXT_PUBLIC_TURNSTILE_SITE_ID="GET_YOUR_TURNSTILE_SITE_ID"
 NEXT_PUBLIC_USE_CAPTCHA=true
 
+# Admin settings
+ADMIN_TAKE_OVER_PASSWORD="CHANGE_ME_TO_SECURE_PASSWORD"
+NEXT_PUBLIC_ADMIN_MAINTENANCE_MESSAGE="Open Throne is currently in a live-development state. Changes are constantly being introduced, please check Github and Discord for any updates. Attack ranges are currently set to 25 levels, with Casualties only enabled for 5 levels."
+
+# SMTP (email) settings
 SMTP_HOST="mailhost"
 SMTP_PORT="465"
 SMTP_USER="api@openthrone.dev"
-SMTP_PASSWORD="MailPassword"
+SMTP_PASSWORD="CHANGE_ME_TO_SECURE_PASSWORD"
 SMTP_FROM_EMAIL="no-reply@openthrone.dev"
 
-# AWS S3 settings - change these if you're using this for static assets
-NEXT_PUBLIC_USE_AWS=false
-AWS_ACCESS_KEY_ID=0xGETKEYFROMAWS
-AWS_SECRET_ACCESS_KEY=0xGETSECRETKEYFROMAWS
-AWS_TOKEN=0xGETTOKENFROMAWS
+# AWS S3 settings
+AWS_ACCESS_KEY_ID="GET_YOUR_AWS_ACCESS_KEY"
+AWS_SECRET_ACCESS_KEY="GET_YOUR_AWS_SECRET_ACCESS_KEY"
+AWS_TOKEN="GET_YOUR_AWS_TOKEN"
 AWS_BUCKET_NAME="openthrone"
 AWS_REGION="us-east-1"
-AWS_S3_ENDPOINT="https://assets.openthrone.dev/"
+AWS_S3_ENDPOINT="https://your-s3-endpoint.com"
+NEXT_PUBLIC_AWS_S3_ENDPOINT="https://assets.openthrone.dev"
+NEXT_PUBLIC_USE_AWS=false
 
-# If you're using AWS S3, change this!
-NEXT_PUBLIC_AWS_S3_ENDPOINT=""
-
-# Adding booleans for easy testing
+# Feature toggles
 NEXT_PUBLIC_ENABLE_ASSASSINATIONS=false
 NEXT_PUBLIC_ENABLE_INFILTRATIONS=false
 NEXT_PUBLIC_ENABLE_INTEL=true
 NEXT_PUBLIC_ENABLE_ATTACKING=true
 NEXT_PUBLIC_ATTACK_LEVEL_RANGE=5
 NEXT_PUBLIC_ENABLE_MESSAGING=true
+NEXT_PUBLIC_USE_NEW_THEME=true
+
+# User access settings
+NEXT_PUBLIC_DISABLE_REGISTRATION=true
+NEXT_PUBLIC_DISABLE_LOGIN=true
