Added websockets...this should be interesting, i really should do SocketIO though

--- a/.env.sample
+++ b/.env.sample
@@ -62,3 +62,5 @@ NEXT_PUBLIC_USE_NEW_THEME=true
 # User access settings
 NEXT_PUBLIC_DISABLE_REGISTRATION=true
 NEXT_PUBLIC_DISABLE_LOGIN=true
+NEXT_PUBLIC_WS_ENABLED=false
+NEXT_PUBLIC_WS_URL="wss://localhost/socket.io/"
