--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "openthrone",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev --turbo -p 3000",
+    "dev": "bun run src/server/index.ts",
     "build": "next build",
     "start": "next start -p 3001",
     "build-stats": "cross-env ANALYZE=true npm run build",
@@ -19,63 +19,63 @@
     "bun-dev": "npx next"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.682.0",
-    "@aws-sdk/s3-request-presigner": "^3.682.0",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.1",
-    "@mantine/charts": "^7.13.4",
-    "@mantine/core": "^7.13.4",
-    "@mantine/form": "^7.13.4",
-    "@mantine/hooks": "^7.13.4",
-    "@mantine/notifications": "^7.13.4",
-    "@mantine/tiptap": "^7.13.4",
+    "@mantine/charts": "^7.15.1",
+    "@mantine/core": "^7.15.1",
+    "@mantine/form": "^7.15.1",
+    "@mantine/hooks": "^7.15.1",
+    "@mantine/notifications": "^7.15.1",
+    "@mantine/tiptap": "^7.15.1",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "@react-email/container": "0.0.11",
     "@react-email/html": "0.0.7",
     "@react-email/section": "0.0.11",
     "@react-email/text": "0.0.7",
-    "@swc/core": "latest",
-    "@tiptap/extension-highlight": "^2.9.1",
-    "@tiptap/extension-link": "^2.9.1",
-    "@tiptap/extension-subscript": "^2.9.1",
-    "@tiptap/extension-superscript": "^2.9.1",
-    "@tiptap/extension-table": "^2.9.1",
-    "@tiptap/extension-table-cell": "^2.9.1",
-    "@tiptap/extension-table-header": "^2.9.1",
-    "@tiptap/extension-table-row": "^2.9.1",
-    "@tiptap/extension-text-align": "^2.9.1",
-    "@tiptap/extension-underline": "^2.9.1",
-    "@tiptap/pm": "^2.9.1",
-    "@tiptap/react": "^2.9.1",
-    "@tiptap/starter-kit": "^2.9.1",
+    "@swc/core": "1.5.25",
+    "@tiptap/extension-highlight": "^2.10.4",
+    "@tiptap/extension-link": "^2.10.4",
+    "@tiptap/extension-subscript": "^2.10.4",
+    "@tiptap/extension-superscript": "^2.10.4",
+    "@tiptap/extension-table": "^2.10.4",
+    "@tiptap/extension-table-cell": "^2.10.4",
+    "@tiptap/extension-table-header": "^2.10.4",
+    "@tiptap/extension-table-row": "^2.10.4",
+    "@tiptap/extension-text-align": "^2.10.4",
+    "@tiptap/extension-underline": "^2.10.4",
+    "@tiptap/pm": "^2.10.4",
+    "@tiptap/react": "2.9.1",
+    "@tiptap/starter-kit": "^2.10.4",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/bun": "^1.1.12",
+    "@types/bun": "^1.1.14",
     "@types/marked": "^5.0.2",
     "@types/md5": "^2.3.5",
-    "@types/nodemailer": "^6.4.16",
+    "@types/nodemailer": "^6.4.17",
     "argon2": "^0.31.2",
-    "aws-sdk": "^2.1691.0",
-    "babel-plugin-react-compiler": "^19.0.0-beta-6fc168f-20241025",
+    "aws-sdk": "^2.1692.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-201e55d-20241215",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cypress": "^13.15.1",
-    "express-jwt": "^8.4.1",
+    "cypress": "^13.17.0",
+    "express-jwt": "^8.5.1",
     "formidable": "^3.5.2",
     "framer-motion": "^10.18.0",
     "image-size": "^1.1.1",
     "marked": "^11.2.0",
     "marked-gfm-heading-id": "^3.2.0",
-    "marked-mangle": "^1.1.9",
+    "marked-mangle": "^1.1.10",
     "md5": "^2.3.0",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.11.5",
     "mysql2-promise": "^0.1.4",
-    "next": "^15.0.2",
-    "next-auth": "^4.24.10",
+    "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "next-auth-client": "^1.5.0",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.6.0",
@@ -85,16 +85,16 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "postgresql": "^0.0.1",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0-rc-fb9a90fa48-20240614",
-    "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-email": "2.0.0",
-    "react-hook-form": "^7.53.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
-    "recharts": "^2.13.1",
+    "recharts": "^2.15.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
@@ -106,22 +106,22 @@
     "rxjs": "^7.8.1",
     "superjson": "^1.13.3",
     "swr": "^2.2.5",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.17",
     "tiptap-markdown": "^0.8.10",
     "use-async-effect": "^2.2.7",
-    "yup": "^1.4.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "latest",
-    "@percy/cli": "^1.30.1",
+    "@percy/cli": "^1.30.5",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.8.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.20",
@@ -131,12 +131,12 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^15.0.2",
+    "eslint-config-next": "^15.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-jest-dom": "^5.4.0",
+    "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
@@ -145,22 +145,22 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-tailwindcss": "^3.17.5",
-    "eslint-plugin-testing-library": "^6.4.0",
+    "eslint-plugin-testing-library": "^6.5.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.10",
+    "lint-staged": "^15.2.11",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "rimraf": "^5.0.10",
     "semantic-release": "^19.0.5",
-    "start-server-and-test": "^2.0.8",
-    "typescript": "^5.6.3"
+    "start-server-and-test": "^2.0.9",
+    "typescript": "^5.7.2"
   },
   "release": {
     "branches": [
@@ -180,5 +180,5 @@
       "@semantic-release/github"
     ]
   },
-  "author": "Ixartz (https://github.com/ixartz)"
+  "author": "DasTacoMann (https://github.com/uaktags)"
 }
