--- a/.env.sample
+++ b/.env.sample
@@ -63,4 +63,4 @@ NEXT_PUBLIC_USE_NEW_THEME=true
 NEXT_PUBLIC_DISABLE_REGISTRATION=true
 NEXT_PUBLIC_DISABLE_LOGIN=true
 NEXT_PUBLIC_WS_ENABLED=false
-NEXT_PUBLIC_WS_URL="wss://localhost/socket.io/"
+NEXT_PUBLIC_WS_URL="wss://localhost/"
