change to opendominon rpg-awesome for more icons.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mantine/tiptap": "^7.15.3",
     "@marsidev/react-turnstile": "^0.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@opendominion/rpg-awesome": "^0.0.17",
     "@prisma/client": "^5.22.0",
     "@react-email/container": "^0.0.11",
     "@react-email/html": "^0.0.7",
@@ -102,7 +103,6 @@
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
-    "rpg-awesome": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "superjson": "^1.13.3",
